# bitsgpt-rewrite

./: .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  main.py  pyproject.toml
.github/workflows/: linting.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
src/: agents.py  app.py  nodes.py  state.py
src/campus_rag/: create_database.py  rag_chain_components.py
src/campus_rag/data/: WITW '24.md
src/courses/data/raw/: pre-requisites_cleaned.csv
src/memory/: data.py  long_term_memory.py  short_term_memory.py
src/prompts/: GENERAL_CAMPUS_QUERY_AGENT.md  INTENT_CLASSIFIER_AGENT.md  LONG_TERM_MEMORY_AGENT.md
src/tools/: memory_tool.py
